<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#819FF7"
    tools:context=".MainActivity">

    <RadioGroup
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20sp"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/XML"
            android:checked="true"
            android:id="@+id/rdbXml" />

        <RadioButton
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/JSON"
            android:id="@+id/rdbJson" />
    </RadioGroup>

    <TextView
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/res"
        android:id="@+id/txt1"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_height="40dp">

        <EditText
            android:inputType="text"
            android:background="#9F81F7"
            android:layout_marginBottom="20sp"
            android:text="@string/defecto_res"
            android:layout_width="260dp"
            android:layout_height="25sp"
            android:id="@+id/tbxResultados" />

        <EditText
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="#AC58FA"
            android:text="@string/punto_xml"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/tbxExtension_Uno" />

    </LinearLayout>

    <TextView
        android:layout_marginEnd="100dp"
        android:layout_marginRight="108dp"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/apu"
        android:id="@+id/txt2" />

    <EditText
        android:inputType="text"
        android:background="#9F81F7"
        android:layout_marginBottom="10sp"
        android:text="@string/defecto_apu"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/tbxApuestas" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/jor"
            android:id="@+id/txt3" />

        <NumberPicker
            android:solidColor="@android:color/holo_purple"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:id="@+id/nmpkMenor" />

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/flecha"
            android:id="@+id/txt4" />

        <NumberPicker
            android:solidColor="@android:color/holo_purple"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:id="@+id/nmpkMayor" />

    </LinearLayout>

    <TextView
        android:layout_marginEnd="113dp"
        android:layout_marginRight="113dp"
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pre"
        android:id="@+id/txt5" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:gravity="center_horizontal">

        <EditText
            android:inputType="text"
            android:background="#9F81F7"
            android:text="@string/prem"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/tbxPremios" />

        <EditText
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="#AC58FA"
            android:text="@string/punto_xml"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/tbxExtension_Dos" />

    </LinearLayout>

    <Button
        android:background="#2E9AFE"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCotejar"
        android:id="@+id/btnCotejar" />
</LinearLayout>
